dclone package versions

Version 0.2-1, July 10, 2009

    * jags.fit: model argument can be a function,
      thus no need to call functions to write the
      model file and clean up (as suggested by
      Gabor Grothendieck).
    * dclone is now generic with default behaviour.

Version 0.2-0, June 14, 2009

    * glmexplorer: now step() is used via try().

Version 0.1-3, May 28, 2009

    * mcmc object got n.clones attribute
      if data contained it.
    * nclones.list: returns values for
      objects in a list (for data arg of
      jags.fit).
    * changes in jags.fit to incorporate
      more rjags features (e.g. progress.bar)
    * nclones is now defined as method along
      with a default method.

Version 0.1-2, April 30, 2009

    * print.glmexplorer: new function.
    * glmexplorer: knows step by select arg,
      and has y and model attributes.
    * dclone: handles names and got a
      print method.
    * nclones: new function.
    * mat2list: moved to mefa package.
    * lincovtest: moved from abmi package.

Version 0.1-1, April 23, 2009

    * combine method removed (turned out
      to be nonsense)
    * New parser warnings fixed,
      utf-8 encoding used throughout.
    * Initial documentation done.

Version 0.1-0, April 23, 2009

    * Initial bunch of functions released.