@@ -1,5 +1,5 @@
 dclone.default <-
-function(x, n.clones=1, ...)
+function(x, n.clones=1, attrib=TRUE, ...)
 {
     if (is.list(x) && !is.data.frame(x))
         dclone.list(x, n.clones=n.clones, ...)
@@ -27,18 +27,9 @@ function(x, n.clones=1, ...)
                 names(rval) <- paste(NAMES, rep(1:n.clones, each=length(NAMES)), sep="_")
         }
     }
-    attr(rval, "n.clones") <- n.clones
+    if (attrib) {
+        attr(rval, "n.clones") <- n.clones
+        attr(attr(rval, "n.clones"), "method") <- "rep"
+    }
     rval
-}
-
-dclone.list <- function(x, n.clones=1, 
-multiply=NULL, unchanged=NULL, ...)
-{
-    out <- lapply(x, dclone, n.clones=n.clones, ...)
-    if (!is.null(multiply))
-        out[multiply] <- lapply(x, "*", n.clones)[multiply]
-    if (!is.null(unchanged))
-        out[unchanged] <- x[unchanged]
-    attr(out, "n.clones") <- n.clones
-    out
 }
